--- a/principal.html
+++ b/principal.html
@@ -6,6 +6,7 @@
     <title>Gustavo De Souza Spindola</title>
     <style>
         body{
+            margin: 0;
             background: linear-gradient(90deg, #000000, #9929EA);
         }
 
@@ -14,6 +15,7 @@
             padding: 18px 0;
             box-shadow: 0 0 15px #CC66DA;
             border-radius: 50px;
+            margin: 10px;
         }
 
         .menu ul {
@@ -23,6 +25,7 @@
             gap: 20px;
             margin: 0;
             padding: 0;
+            flex-wrap: wrap;
         }
 
         .menu ul li a {
@@ -50,10 +53,28 @@
             justify-content: center;
             align-items: center;
             padding: 0 20px;
+            flex-wrap: wrap;
+        }
+
+        .div-box-1, .div-box-1 {
+          width: 28vw;
+          min-width: 280px;
+          max-width: 350px;
+          height: 40vh;
+          background: #212121;
+          align-items: center;
+          border-radius: 10px;
+          justify-content: space-between;
+          display: flex;
+          flex-direction: column;
+          padding: 10px;
+          box-shadow: 0 0 15px #CC66DA;
         }
 
         .div-box {
           width: 28vw;
+          min-width: 280px;
+          max-width: 350px;
           height: 40vh;
           background: #212121;
           align-items: center;
@@ -65,13 +86,13 @@
           box-shadow: 0 0 15px #CC66DA;
         }
         
-        .div-box img {
+        .div-box-1 img {
             width: 120px;
             height: auto;
             margin-bottom: 10px; 
         }
 
-        .div-box p {
+        .div-box-1 p {
             color: #D3ECCD;
             justify-content: center;
             text-align: center;
@@ -90,7 +111,7 @@
     </nav>
 
     <div class="fixo">
-        <div class="div-box">
+        <div class="div-box-1">
             <p>Estudante de sistemas de informação no centro univeristário barriga verde - UNIBAVE.
                 Atualmente na quarta fase do curso, com expectatica de finalização em 02/2028.
             </p>
